--- a/index.html
+++ b/index.html
@@ -69,21 +69,21 @@
                     <p><em>ValueObjects</em> should cover every common type a developer could need in a DDD project. With this goal in mind, the object library should stay as generalistic as possible in order to be easily extendable and customizable in every single project.</p>
                     <p>Types list (mostly implemented as namespaces):</p>
                     <ul>
-                        <li>[x] <a href="/nicolopignatelli/valueobjects/blob/master/src/ValueObjects/DateTime">Dates and time</a>
+                        <li>[x] <a href="api/namespace-ValueObjects.DateTime.html">Dates and time</a>
                         </li>
-                        <li>[x] <a href="/nicolopignatelli/valueobjects/blob/master/src/ValueObjects/Null">Null</a>, <a href="/nicolopignatelli/valueobjects/blob/master/src/ValueObjects/Number">Numbers</a> and <a href="/nicolopignatelli/valueobjects/blob/master/src/ValueObjects/String">Strings</a>
+                        <li>[x] <a href="api/namespace-ValueObjects.Null.html">Null</a>, <a href="api/namespace-ValueObjects.Number.html">Numbers</a> and <a href="api/namespace-ValueObjects.String.html">Strings</a>
                         </li>
-                        <li>[x] <a href="/nicolopignatelli/valueobjects/blob/master/src/ValueObjects/Structure">Data structures</a>
+                        <li>[x] <a href="api/namespace-ValueObjects.Structure.html">Data structures</a>
                         </li>
-                        <li>[x] <a href="/nicolopignatelli/valueobjects/blob/master/src/ValueObjects/Identity">UUID</a>
+                        <li>[x] <a href="api/namespace-ValueObjects.Identity.html">UUID</a>
                         </li>
-                        <li>[x] <a href="/nicolopignatelli/valueobjects/blob/master/src/ValueObjects/Person">Person data (age, gender, etc...)</a>
+                        <li>[x] <a href="api/namespace-ValueObjects.Person.html">Person data (age, gender, etc...)</a>
                         </li>
-                        <li>[x] <a href="/nicolopignatelli/valueobjects/blob/master/src/ValueObjects/Money">Money and currencies</a>
+                        <li>[x] <a href="api/namespace-ValueObjects.Money.html">Money and currencies</a>
                         </li>
-                        <li>[x] <a href="/nicolopignatelli/valueobjects/blob/master/src/ValueObjects/Geography">Geographic data (coordinates, addresses, etc...)</a>
+                        <li>[x] <a href="api/namespace-ValueObjects.Geography.html">Geographic data (coordinates, addresses, etc...)</a>
                         </li>
-                        <li>[x] <a href="/nicolopignatelli/valueobjects/blob/master/src/ValueObjects/Web">Internet related (URLs, email addresses, IPs, etc...)</a>
+                        <li>[x] <a href="api/namespace-ValueObjects.Web.html">Internet related (URLs, email addresses, IPs, etc...)</a>
                         </li>
                         <li>[ ] <em>Submit yours!</em>
                         </li>
