Complete introduction page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Starter Template for Bootstrap</title>
+    <title>ValueObjects - PHP library</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -65,6 +65,10 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
+                    <h2>Introduction</h2>
+                    <p><em>ValueObjects</em> provides a collection of interrelated classes that can act as a solid and consistent basis for your DDD project VALUE OBJECTS classes.</p>
+                    <p><em>ValueObjects</em> classes can be easily extended, although each class has been designed for a high degree of completeness and definition. Moreover, while class constructors use type hinting for stricter design and object instantiation, a common static factory method (hurray for late static bindings) allows for a cleaner and concise code.</p>
+
                     <h2>Covered types</h2>
                     <p><em>ValueObjects</em> should cover every common type a developer could need in a DDD project. With this goal in mind, the object library should stay as generalistic as possible in order to be easily extendable and customizable in every single project.</p>
                     <p>Types list (mostly implemented as namespaces):</p>
