--- a/index.html
+++ b/index.html
@@ -37,12 +37,6 @@
                 <a href="api/index.html" target="_blank">API reference <span class="glyphicon glyphicon-new-window"></span></a>
             </li>
             <li>
-                <a href="contributing.html">Contributing</a>
-            </li>
-            <li>
-                <a href="license.html">License</a>
-            </li>
-            <li>
                 <a href="about.html">About</a>
             </li>
         </ul>
@@ -89,7 +83,7 @@
                         </li>
                         <li>[x] <a href="api/namespace-ValueObjects.Web.html">Internet related (URLs, email addresses, IPs, etc...)</a>
                         </li>
-                        <li>[ ] <em>Submit yours!</em>
+                        <li>[ ] <a href="https://github.com/nicolopignatelli/valueobjects/issues/new">Suggest other</a> or submit a pull request.
                         </li>
                     </ul>
                 </div>
